2005-12-10  Oliver Hunt  <ojh16@student.canterbury.ac.nz>

        New layout test for http://bugzilla.opendarwin.org/show_bug.cgi?id=3539

        * fast/js/cyclic-ref-toString-expected.txt: Added.
        * fast/js/cyclic-ref-toString.html: Added.

2005-12-10  Darin Adler  <darin@apple.com>

        New layout test for http://bugzilla.opendarwin.org/show_bug.cgi?id=5784

        * fast/parser/duplicate-html-body-element-IDs-expected.txt: Added.
        * fast/parser/duplicate-html-body-element-IDs.html: Added.

2005-12-09  Justin Garcia  <justin.garcia@apple.com>

        New layout tests for:
        <rdar://problem/4370209> Reproducible crash when pasting over whitespace:pre text
        <rdar://problem/4370220> Double or triple clicking in whitespace:pre text creates incorrect selections

        Reviewed by harrison

        * editing/pasteboard/paste-pre-002-expected.checksum: Added.
        * editing/pasteboard/paste-pre-002-expected.png: Added.
        * editing/pasteboard/paste-pre-002-expected.txt: Added.
        * editing/pasteboard/paste-pre-002.html: Added.
        * editing/selection/triple-click-in-pre-expected.checksum: Added.
        * editing/selection/triple-click-in-pre-expected.png: Added.
        * editing/selection/triple-click-in-pre-expected.txt: Added.
        * editing/selection/triple-click-in-pre.html: Added.

2005-12-08  Eric Seidel  <eseidel@apple.com>

        Reviewed by darin.

        Fixes <applet> in xhtml, as well as <use> in SVG.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5987

        * svg/W3C-SVG-1.1/filters-gauss-01-b-expected.checksum:
        * svg/W3C-SVG-1.1/filters-gauss-01-b-expected.png:
        * svg/W3C-SVG-1.1/filters-gauss-01-b-expected.txt:
        * svg/W3C-SVG-1.1/filters-light-01-f-expected.checksum:
        * svg/W3C-SVG-1.1/filters-morph-01-f-expected.txt:
        * svg/W3C-SVG-1.1/filters-specular-01-f-expected.checksum:
        * svg/W3C-SVG-1.1/render-groups-03-t-expected.checksum: