@@ -1,0 +1,19 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,20) size 784x560
+      RenderBlock {DIV} at (20,0) size 744x52 [bgcolor=#ADD8E6]
+        RenderBlock {P} at (0,0) size 744x18
+          RenderText {TEXT} at (0,0) size 314x18
+            text run at (0,0) width 314: "There should be one outline around the whole div"
+        RenderBlock {P} at (-20,34) size 764x18
+          RenderText {TEXT} at (0,0) size 158x18
+            text run at (0,0) width 158: "Not around each element"
+      RenderBlock {DIV} at (20,72) size 744x52 [bgcolor=#ADD8E6]
+        RenderBlock {P} at (0,0) size 744x18
+          RenderText {TEXT} at (0,0) size 314x18
+            text run at (0,0) width 314: "There should be one outline around the whole div"
+        RenderBlock {P} at (-20,34) size 764x18
+          RenderText {TEXT} at (0,0) size 158x18
+            text run at (0,0) width 158: "Not around each element"
