@@ -1,0 +1,12 @@
+<html>
+	<body>
+		<div style="outline:solid 3px #1f5ccf; background-color: lightblue; margin: 20px">
+			<p>There should be one outline around the whole div</p>
+			<p style="margin-left: -20px">Not around each element</p>
+		</div>
+		<div style="outline-style: auto; background-color: lightblue; margin: 20px">
+			<p>There should be one outline around the whole div</p>
+			<p style="margin-left: -20px">Not around each element</p>
+		</div>
+	</body>
+</html>
