@@ -1,3 +1,12 @@
+2005-12-10  Darin Adler  <darin@apple.com>
+
+        New layout test for http://bugzilla.opendarwin.org/show_bug.cgi?id=3983
+
+        * fast/css/outline-auto-location-expected.checksum: Added.
+        * fast/css/outline-auto-location-expected.png: Added.
+        * fast/css/outline-auto-location-expected.txt: Added.
+        * fast/css/outline-auto-location.html: Added.
+
 2005-12-10  Oliver Hunt  <ojh16@student.canterbury.ac.nz>
 
         New layout test for http://bugzilla.opendarwin.org/show_bug.cgi?id=3539
